<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">זמני היום</string>
    <string name="settings">הגדרות</string>
    <string name="alert_history">היסטוריית התראות</string>
    <string name="manage_alerts">ניהול התראות</string>
    <string name="alarm">התראה</string>
    <string name="dark_mode">מצב כהה</string>
    <string name="light_mode">מצב בהיר</string>
    <string name="theme">ערכת נושא</string>
    <string name="location">מיקום</string>
    <string name="dst_settings">שעון קיץ/חורף</string>
    <string name="dst_auto">אוטומטי</string>
    <string name="dst_summer">שעון קיץ</string>
    <string name="dst_winter">שעון חורף</string>
    <string name="save">שמור</string>
    <string name="cancel">ביטול</string>
    <string name="delete">מחק</string>
    <string name="edit">ערוך</string>
    <string name="add_alert">הוסף התראה</string>
    <string name="enabled">מופעל</string>
    <string name="disabled">מושבת</string>
    <string name="minutes_before">דקות לפני</string>
    <string name="minutes_after">דקות אחרי</string>
    <string name="hours_before">שעות לפני</string>
    <string name="at_time">בזמן</string>
    <string name="before">לפני</string>
    <string name="after">אחרי</string>
    <string name="dismiss">סגור</string>
    <string name="snooze">נודניק</string>
    <string name="snooze_minutes">דקות נודניק</string>
    <string name="no_alerts">אין התראות</string>
    <string name="no_history">אין היסטוריה</string>
    <string name="alert_for">התראה עבור</string>
    <string name="select_zman">בחר זמן</string>
    <string name="offset_type">סוג היסט</string>
    <string name="offset_value">ערך היסט</string>
    <string name="sound">צליל</string>
    <string name="vibrate">רטט</string>
    <string name="city">עיר</string>
    <string name="latitude">קו רוחב</string>
    <string name="longitude">קו אורך</string>
    <string name="elevation">גובה</string>
    <string name="today">היום</string>
    <string name="hebrew_date">תאריך עברי</string>

    <string name="zman_alot">עלות השחר</string>
    <string name="zman_misheyakir">משיכיר</string>
    <string name="zman_hanetz">הנץ החמה</string>
    <string name="zman_sof_shma_mga">סוף זמן ק״ש (מג״א)</string>
    <string name="zman_sof_shma_gra">סוף זמן ק״ש (גר״א)</string>
    <string name="zman_sof_tfila_mga">סוף זמן תפילה (מג״א)</string>
    <string name="zman_sof_tfila_gra">סוף זמן תפילה (גר״א)</string>
    <string name="zman_chatzot">חצות היום</string>
    <string name="zman_mincha_gedola">מנחה גדולה</string>
    <string name="zman_mincha_ketana">מנחה קטנה</string>
    <string name="zman_plag_mincha">פלג המנחה</string>
    <string name="zman_shkia">שקיעה</string>
    <string name="zman_tzeit">צאת הכוכבים</string>
    <string name="zman_tzeit_rt">צאת ר״ת</string>
    <string name="zman_chatzot_layla">חצות הלילה</string>

    <string name="jerusalem">ירושלים</string>
    <string name="tel_aviv">תל אביב</string>
    <string name="haifa">חיפה</string>
    <string name="beer_sheva">באר שבע</string>
    <string name="custom">מותאם אישית</string>

    <string name="select_city">בחר עיר</string>
    <string name="alert_active">התראה פעילה</string>
    <string name="next_alert">התראה הבאה</string>
    <string name="clear_history">נקה היסטוריה</string>
    <string name="confirm_delete">האם למחוק?</string>
    <string name="yes">כן</string>
    <string name="no">לא</string>
    <string name="about">אודות</string>
    <string name="version">גרסה</string>
    <string name="app_description">אפליקציית זמני היום עם שעון מעורר והתראות</string>

    <!-- Customization -->
    <string name="customize">התאמה אישית</string>
    <string name="background_image">��מונת רקע</string>
    <string name="choose_image">בחר תמונה</string>
    <string name="reset_default">חזור לברי��ת מחדל</string>
    <string name="custom_colors">צבעים</string>
    <string name="primary_color">צבע ראשי</string>
    <string name="accent_color">צבע הדגשה</string>
    <string name="bg_color">צבע רקע</string>
    <string name="font_size">גודל גופן</string>
    <string name="app_icon">אייקון אפליקציה</string>
    <string name="choose_icon">בחר אייקון</string>
    <string name="pick_color">בחר צבע</string>
    <string name="preset_colors">צבעים מוכנים</string>

    <!-- Ringtone -->
    <string name="ringtone">צלצול</string>
    <string name="choose_ringtone">בחר צלצול</string>
    <string name="device_ringtones">צלצולי המכשיר</string>
    <string name="upload_ringtone">העלה קובץ צלצול</string>
    <string name="record_ringtone">הקלט צלצול</string>
    <string name="recording">מקליט…</string>
    <string name="stop_recording">עצור הקלטה</string>
    <string name="play">נגן</string>
    <string name="stop">עצור</string>
    <string name="custom_ringtone">צלצול מותאם</string>
    <string name="default_ringtone">צלצול ברירת מחדל</string>

    <!-- View modes -->
    <string name="view_list">רשימה</string>
    <string name="view_cards">כרטיסים</string>
    <string name="view_compact">קומפקטי</string>

    <!-- Share -->
    <string name="share_app">שתף אפליקציה</string>
    <string name="share_text">הורד את אפליקציית זמני היום - שעון מעורר לזמנ�� תפילה!\nhttps://github.com/neriyabudraham/zmaney-hayom</string>

    <!-- Edit alert -->
    <string name="edit_alert">ערוך התראה</string>
</resources>
